--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "start": "node dist/app.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "reset-db": "node reset-database.js",
+    "seed": "node -e \"require('./dist/database/seeds.js').seedDatabase()\""
   },
   "keywords": [],
   "author": "",
